istio/kubeflow-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: istio-ingressgateway-service
  namespace: istio-system
spec:
  ports:
    - name: status-port
      protocol: TCP
      port: 15021
      targetPort: 15021
      nodePort: 31364
    - name: http2
      protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 31812
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
      nodePort: 31715
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  type: ClusterIp
  sessionAffinity: None
  externalTrafficPolicy: Cluster
